Moved generic css classes to a new file; Reorganized classes for readability and modularity; Fixed launch config to run on Firefox.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "firefox",
             "request": "launch",
             "reAttach": true,
-            "file": "${workspaceFolder}/myindex.html"
+            "file": "${workspaceFolder}/newindex.html"
         }
     ]
 }
